--- a/custom_components/webuntis/manifest.json
+++ b/custom_components/webuntis/manifest.json
@@ -7,5 +7,6 @@
   "codeowners": ["@JonasJoKuJonas"],
   "quality_scale": "silver",
   "iot_class": "local_polling",
-  "loggers": ["webuntis"]
+  "loggers": ["webuntis"],
+  "version": "v1.0.1"
 }
