--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,10 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+  schedule:
+  - cron:  '0 0 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,4 +28,4 @@ jobs:
         uses: hacs/action@22.5.0
         with:
           category: integration
-          repository: webuntis
+          repository: homeassistant-WebUntis
