--- a/custom_components/webuntis/manifest.json
+++ b/custom_components/webuntis/manifest.json
@@ -2,7 +2,8 @@
   "domain": "webuntis",
   "name": "Web Untis",
   "config_flow": true,
-  "documentation": "",
+  "documentation": "https://github.com/JonasJoKuJonas/homeassistant-WebUntis/",
+  "issue_tracker": "https://github.com/JonasJoKuJonas/homeassistant-WebUntis/issues",
   "requirements": ["webuntis==0.1.12"],
   "codeowners": ["@JonasJoKuJonas"],
   "quality_scale": "silver",
