--- a/.github/workflows/hacs-validate.yml
+++ b/.github/workflows/hacs-validate.yml
@@ -3,8 +3,10 @@ name: validate
 on:
   push:
   pull_request:
-  #schedule:
-  #  - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"
+    
+  workflow_dispatch:
 
 jobs:
   validate-hassfest:
