--- a/custom_components/webuntis/manifest.json
+++ b/custom_components/webuntis/manifest.json
@@ -2,10 +2,12 @@
   "domain": "webuntis",
   "name": "Web Untis",
   "config_flow": true,
-  "documentation": "",
+  "documentation": "https://github.com/JonasJoKuJonas/homeassistant-WebUntis/",
+  "issue_tracker": "https://github.com/JonasJoKuJonas/homeassistant-WebUntis/issues",
   "requirements": ["webuntis==0.1.12"],
   "codeowners": ["@JonasJoKuJonas"],
   "quality_scale": "silver",
   "iot_class": "local_polling",
-  "loggers": ["webuntis"]
+  "loggers": ["webuntis"],
+  "version": "v1.0.2"
 }
