--- a/custom_components/webuntis/manifest.json
+++ b/custom_components/webuntis/manifest.json
@@ -1,13 +1,14 @@
 {
   "domain": "webuntis",
   "name": "Web Untis",
+  "integration_type": "device",
   "config_flow": true,
   "documentation": "https://github.com/JonasJoKuJonas/homeassistant-WebUntis/",
   "issue_tracker": "https://github.com/JonasJoKuJonas/homeassistant-WebUntis/issues",
   "requirements": ["webuntis==0.1.12"],
   "codeowners": ["@JonasJoKuJonas"],
   "quality_scale": "silver",
-  "iot_class": "local_polling",
+  "iot_class": "cloud_polling",
   "loggers": ["webuntis"],
   "version": "v1.0.2"
 }
