--- a/.github/workflows/count_lines.yml
+++ b/.github/workflows/count_lines.yml
@@ -3,10 +3,6 @@ name: Count Lines of Code
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the main branch
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -19,7 +15,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v3
+    #- uses: actions/checkout@v3
 
     # Runs djdefi/cloc-action
     - name: Count Lines of Code (cloc)
