--- a/.github/workflows/count_lines.yml
+++ b/.github/workflows/count_lines.yml
@@ -20,3 +20,5 @@ jobs:
     # Runs djdefi/cloc-action
     - name: Count Lines of Code (cloc)
       uses: djdefi/cloc-action@5
+      with:
+        --report-file: ${{ github.workspace }}/states.md
