--- a/.github/workflows/hacs-validate.yml
+++ b/.github/workflows/hacs-validate.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: validation
         uses: home-assistant/actions/hassfest@master
 
@@ -23,8 +23,8 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - name: checkout
-        uses: "actions/checkout@v2"
+        uses: actions/checkout@v3
       - name: validation 
-        uses: "hacs/action@main"
+        uses: hacs/action@main
         with:
           category: "integration"
