--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: "Set manifest version number"
         run: |
-          python3 ${{ github.workspace }}/.github/scripts/update_hacs_manifest.py --version v1.0.0
+          python3 ${{ github.workspace }}/.github/scripts/update_hacs_manifest.py --version ${{ steps.version.outputs.version }}
       - name: Create zip
         run: |
           cd custom_components/webuntis
