--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,7 @@
 files:
   - source: /custom_components/webuntis/translations/en.json
     translation: /custom_components/webuntis/translations/%locale%.json
+    languages_mapping:
+      locale:
+        de: de    
+        nl: nl
